--- a/src/style.css
+++ b/src/style.css
@@ -25,8 +25,9 @@ body {
 .simboloInfe {
   font-size: 80px;
   display: flex;
-  align-items: flex-end;
-  padding-right: 10px;
+  align-items: flex-start;
+  padding-left: 15px;
+  rotate: 180deg;
 }
 
 .numero {
